# scanCUDA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  main.cu
include/: awkward_offset_arrays.h
src/: awkward_offset_arrays.cpp  awkward_offset_arrays.cu
tests/: scan_test.cpp  tests.cpp
